--- a/styles.css
+++ b/styles.css
@@ -352,7 +352,7 @@ main {
     flex-direction: column;
     align-items: center;
     display: flex;
-    background-color: #fff;
+    background-color: #232222;
     padding: 15px;
     border-radius: 10px;
     width: 95%;
