--- a/styles.css
+++ b/styles.css
@@ -477,6 +477,9 @@ main {
 .rating span:hover {
     color: gold;
 }
+p{
+    color:white;
+}
 @media (max-width: 600px) {
     header {
         display: flex;
